<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:src="@drawable/initial"
        android:scaleType="fitXY"/>

    <LinearLayout
        android:id="@+id/login_screen_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:padding="40dp">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:id="@+id/login_screen_email"
            android:hint="@string/login_email"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:background="@drawable/edit_text_background"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:id="@+id/login_screen_password"
            android:inputType="textPassword"
            android:hint="@string/login_password"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:background="@drawable/edit_text_background"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
        <Button
            android:id="@+id/login_screen_login_button"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:text="@string/login_login_button"
            android:background="@drawable/initial_button"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
        <TextView
            android:id="@+id/login_screen_login_problem_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:textColor="@color/baby_blue"
            android:text="@string/login_trouble_login"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/login_progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

    <Button
        android:id="@+id/login_screen_sign_up_button"
        android:layout_width="fill_parent"
        android:layout_height="65dp"
        android:background="@drawable/initial_button"
        android:layout_alignParentBottom="true"
        android:textColor="@android:color/white"
        android:text="@string/login_sign_up_button"
        android:clickable="true"
        android:onClick="onSignUpClicked"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_screen_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:textColor="@color/baby_blue"
        android:text="@string/login_sign_in_with_facebook"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:layout_above="@+id/login_screen_sign_up_button"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:src="@drawable/login_baner"
        android:layout_above="@+id/login_screen_linear_layout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="logo"
        android:id="@+id/baner_logo" />

</RelativeLayout>