<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:src="@drawable/initial"
        android:scaleType="fitXY"/>
    <ProgressBar
        android:id="@+id/sign_up_progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/sign_up_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:padding="40dp">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:id="@+id/sign_up_screen_username"
            android:hint="@string/sign_up_username"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:background="@drawable/edit_text_background"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:id="@+id/sign_up_screen_email"
            android:hint="@string/sign_up_email"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:background="@drawable/edit_text_background"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:id="@+id/sign_up_screen_password"
            android:hint="@string/sign_up_password"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:background="@drawable/edit_text_background"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:inputType="textPassword"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
        <Button
            android:id="@+id/sign_up_screen_button"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:text="@string/sign_up_button"
            android:background="@drawable/initial_button"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
    </LinearLayout>

</RelativeLayout>